# gcodekit5

./: .gitignore  AGENTS.md  ANALYSIS_INDEX.md  CHANGELOG.md  CODEBASE_IMPROVEMENTS.md  Cargo.toml  Cargo_original.toml  DESIGNER_MIGRATION_COMPARISON.md  DESIGNER_MIGRATION_PLAN.md  DEVHOW.md  EXECUTION_ROADMAP.md  GTK4.md  IMPROVEMENTS_SUMMARY.txt  KEYBINDINGS.md  LEGACY_CODE.md  PLAN.3DVISUALISER.md  PLAN.CSGRS.md  PLAN.TRANSLATE.md  PLAN.md  README.md  REDDIT.md  RELEASE.md  REMEDIATION_PLAN.md  REMEDIATION_QUICK_START.md  REVIEW.DEVICECONFIG.md  REVIEW.GRAPHICAL.md  REVIEW.MC.md  SLINT.md  SPEC.md  STATS.md  TEST_SUITE_SUMMARY.md  TOOLCHAIN.md  VISUALIZER_PERFORMANCE.md  build.rs  build_error.txt  build_log.txt  build_log_jigsaw.txt  build_log_jigsaw_2.txt  build_log_jigsaw_3.txt  build_log_jigsaw_4.txt  (+3 more)
crates/gcodekit5-camtools/: Cargo.toml
crates/gcodekit5-camtools/src/: advanced_features.rs  advanced_features_panel.rs  comment_processor.rs  gerber.rs  hatch_generator.rs  hatch_test.rs  jigsaw_puzzle.rs  laser_engraver.rs  lib.rs  speeds_feeds.rs  spoilboard_grid.rs  spoilboard_surfacing.rs  stats.rs  tabbed_box.rs  validator.rs  vector_engraver.rs
crates/gcodekit5-camtools/tests/: drill_press_test.rs  lib.rs
crates/gcodekit5-designer/: Cargo.toml
crates/gcodekit5-designer/benches/: toolpath_bench.rs
crates/gcodekit5-designer/src/: adaptive.rs  arrays.rs  canvas.rs  commands.rs  designer_editor_integration.rs  designer_state.rs  designer_visualizer_integration.rs  drilling_patterns.rs  dxf_parser.rs  error.rs  font_manager.rs  gcode_converter.rs  gcode_gen.rs  helpers.rs  history.rs  import.rs  lib.rs  model.rs  model3d.rs  multipass.rs  ops.rs  parametric.rs  parametric_shapes.rs  pocket_operations.rs  render_optimizer.rs  renderer.rs  selection_manager.rs  serialization.rs  shadow_projection.rs  shape_store.rs  shapes.rs  slice_toolpath.rs  spatial_index.rs  spatial_manager.rs  stock_removal.rs  svg_renderer.rs  templates.rs  tool_library.rs  toolpath.rs  toolpath_simulation.rs  (+2 more)
crates/gcodekit5-designer/tests/: core.rs  default_bbox_fit.rs  designer_adaptive_integration.rs  designer_arrays_integration.rs  designer_dxf_integration.rs  designer_handle_drag_bug.rs  designer_import_integration.rs  designer_import_mirroring.rs  designer_integration.rs  designer_operations_integration.rs  designer_pan_on_drag.rs  designer_parametric_integration.rs  designer_phase3_cam_ops.rs  designer_shift_key_snapping.rs  features.rs  io.rs  (+14 more)
crates/gcodekit5-settings/: Cargo.toml
(+466 files in other folders)
